--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -8,11 +8,11 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # Use stable runner with broader Python support
 
     strategy:
       matrix:
-        python-version: [3.10, 3.11, 3.13]  # Add more versions as needed
+        python-version: [3.10, 3.11, 3.13]
 
     steps:
     - name: Check out code
@@ -23,11 +23,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Cache pip
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -r requirements-dev.txt || true  # Optional dev reqs like pytest
+        pip install -r requirements-dev.txt || true  # Optional: skip if missing
 
     - name: Run tests with pytest
       run: |
